--- a/src/Core/Modulbank.Users/Modulbank.Users.csproj
+++ b/src/Core/Modulbank.Users/Modulbank.Users.csproj
@@ -10,7 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Models" />
+      <Folder Include="Domain" />
       <Folder Include="Stores" />
       <Folder Include="Tables" />
     </ItemGroup>
