--- a/src/Infrastructure/appsettings.Development.json
+++ b/src/Infrastructure/appsettings.Development.json
@@ -1,16 +1,19 @@
 {
-  "PostgresConnectionOptions":{
-    "Server":"localhost",
-    "UserId":"postgres",
-    "Password":"0354",
-    "Pooling":false
+  "FileStorageOptions": {
+    "PersonPhotoPath": "C:\\Modulbank\\PersonPhotos"
   },
-  "JwtOptions":{
-    "Issuer":"modulbank-api",
-    "Subject":"modulbank-api-request",
-    "Audience":"modulbank-api-client",
-    "Secretkey":"THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
-    "TokenLifeTimeInMinutes":"15"
+  "PostgresConnectionOptions": {
+    "Server": "localhost",
+    "UserId": "postgres",
+    "Password": "0354",
+    "Pooling": false
+  },
+  "JwtOptions": {
+    "Issuer": "modulbank-api",
+    "Subject": "modulbank-api-request",
+    "Audience": "modulbank-api-client",
+    "Secretkey": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+    "TokenLifeTimeInMinutes": "15"
   },
   "Logging": {
     "LogLevel": {
