--- a/src/Infrastructure/appsettings.Production.json
+++ b/src/Infrastructure/appsettings.Production.json
@@ -15,6 +15,9 @@
     "Secretkey": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
     "TokenLifeTimeInMinutes": "15"
   },
+  "AccountOptions": {
+    "DefaultLifetimeYear": 2
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
