feat: fix settings

--- a/src/Application/Modulbank.App.Api/Modulbank.App.Api.csproj
+++ b/src/Application/Modulbank.App.Api/Modulbank.App.Api.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Content Include="..\..\Infrastructure\appsettings.Development.json" Link="appsettings.Development.json" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="..\..\Infrastructure\appsettings.Staging.json" Link="appsettings.Staging.json" CopyToOutputDirectory="PreserveNewest" />
     <Content Include="..\..\Infrastructure\appsettings.Production.json" Link="appsettings.Production.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
