--- a/src/Infrastructure/appsettings.Development.json
+++ b/src/Infrastructure/appsettings.Development.json
@@ -2,11 +2,49 @@
   "FileStorageOptions": {
     "PersonPhotoPath": "C:\\Modulbank\\PersonPhotos"
   },
-  "PostgresConnectionOptions": {
-    "Server": "localhost",
-    "UserId": "postgres",
-    "Password": "0354",
-    "Pooling": false
+  "PostgresConnections": {
+    "connectionOptions": [
+      {
+        "Context": "AccountsContext",
+        "Server": "localhost",
+        "UserId": "postgres",
+        "Password": "0354",
+        "Pooling": false,
+        "DatabaseName": "modulbank-accounts",
+        "DatabaseOwner": "postgres",
+        "MaintenanceDatabase": "postgres"
+      },
+      {
+        "Context": "BusContext",
+        "Server": "localhost",
+        "UserId": "postgres",
+        "Password": "0354",
+        "Pooling": false,
+        "DatabaseName": "modulbank-bus",
+        "DatabaseOwner": "postgres",
+        "MaintenanceDatabase": "postgres"
+      },
+      {
+        "Context": "ProfilesContext",
+        "Server": "localhost",
+        "UserId": "postgres",
+        "Password": "0354",
+        "Pooling": false,
+        "DatabaseName": "modulbank-profiles",
+        "DatabaseOwner": "postgres",
+        "MaintenanceDatabase": "postgres"
+      },
+      {
+        "Context": "UsersContext",
+        "Server": "localhost",
+        "UserId": "postgres",
+        "Password": "0354",
+        "Pooling": false,
+        "DatabaseName": "modulbank-users",
+        "DatabaseOwner": "postgres",
+        "MaintenanceDatabase": "postgres"
+      }
+    ]
   },
   "JwtOptions": {
     "Issuer": "modulbank-api",
@@ -15,8 +53,8 @@
     "Secretkey": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
     "TokenLifeTimeInMinutes": "15"
   },
-  "AccountOptions" : {
-    "DefaultLifetimeYear":2
+  "AccountOptions": {
+    "DefaultLifetimeYear": 2
   },
   "Logging": {
     "LogLevel": {
